# pg-update-dependents

./: .gitignore  README.md  pyproject.toml  requirements.txt
pg_update_dependents/: object_graph.py
src/postgresql_dependent_objects/: __about__.py  object_graph.py  sql.py
